SlidingGameStart/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Other Apps\programming\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\Other Apps\programming\BlueJ\lib\bluejcore.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\junit-4.11.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\lang-stride.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\Other Apps\programming\BlueJ\lib\userlib\pi4j-service.jar;C:\Program Files\Other Apps\programming\Projects\BlueJ\Assignment6
-d
C:\Program Files\Other Apps\programming\Projects\BlueJ\Assignment6\doc
-encoding
UTF-8
-charset
UTF-8
C:\Program Files\Other Apps\programming\Projects\BlueJ\Assignment6\SlidingGame.java
<---- end of javadoc command ---->
Loading source file C:\Program Files\Other Apps\programming\Projects\BlueJ\Assignment6\SlidingGame.java...
C:\Program Files\Other Apps\programming\Projects\BlueJ\Assignment6\SlidingGame.java:93: error: ']' expected
      int[] newSeq = int[SIZE];
                         ^
C:\Program Files\Other Apps\programming\Projects\BlueJ\Assignment6\SlidingGame.java:93: error: ';' expected
      int[] newSeq = int[SIZE];
                             ^
2 errors
